# elastic-ai.hw-measurements

./: .gitignore  Makefile  README.md  devenv.nix  pyproject.toml
.github/workflows/: check-tests.yml  release.yml
artefact/arty7/: TOP_MODULE.bit  TOP_MODULE_clock_utilization_routed.rpt
artefact/env5/: TOP_MODULE.bit  TOP_MODULE_clock_utilization_routed.rpt  TOP_MODULE_io_placed.rpt  TOP_MODULE_power_routed.rpt  TOP_MODULE_timing_summary_routed.rpt  TOP_MODULE_utilization_placed.rpt
artefact/env6_mini/: TOP_MODULE_timing.rpt  TOP_MODULE_util_impl.rpt  TOP_MODULE_util_sync.rpt
docs/: index.md
docs/examples/: adc.md  amp.md  dac.md  noise.md
elasticai/fpga_design/: design_project.xpr
elasticai/fpga_test/: main_test_fpga.py
elasticai/fpga_test/creator_data/: template.py
elasticai/fpga_test/src/: control_dut.py  emulator_filter.py  fixedpoint_handler.py  plotting.py  signal_generator.py
elasticai/fpga_test/testcase/: bode.py  creator.py  echo.py  handler.py  mult.py  rxm.py
elasticai/fpga_testing/: README.md  __init__.py  bin_build.py  bin_build_test.py  copy_design.py  copy_design_test.py  definitions.py  definitions_test.py  main_fpga.py  report.py  routine.py  routine_test.py  testing_routine.py
elasticai/fpga_testing/_helper/: __init__.py  filter.py  filter_test.py  signal_generator.py  signal_generator_test.py  structure.py  structure_test.py
elasticai/fpga_testing/com/: __init__.py  device_serial.py  device_serial_test.py
elasticai/fpga_testing/design_arty7/: test_dut.v  top_module.v  uart_middleware.v
elasticai/fpga_testing/design_env5/: io.xdc  spi_middleware.v  spi_slave_wclk.v  test_dut.v  top_module.v
elasticai/fpga_testing/design_fpga/: io.xdc  test_dut.v  top_module.v  uart_com.v  uart_fifo.v  uart_middleware.v
elasticai/fpga_testing/design_gatemate/: io.ccf  top_module.v  top_module_tb.v
elasticai/fpga_testing/design_skeleton/: skeleton_dnn.v  skeleton_echo.v  skeleton_filter.v  skeleton_mac.v  skeleton_math.v  skeleton_math_slow.v  skeleton_ram.v  skeleton_rom.v
elasticai/fpga_testing/dummy/: TOP_MODULE.bit  TOP_MODULE_clock_utilization_routed.rpt  TOP_MODULE_io_placed.rpt  TOP_MODULE_power_routed.rpt  TOP_MODULE_timing_summary_routed.rpt  TOP_MODULE_utilization_placed.rpt
elasticai/fpga_testing/reports/: __init__.py  oss_cad.py  oss_cad_test.py  vivado.py  vivado_test.py
elasticai/fpga_testing/runner/: __init__.py  exp_dut.py  exp_dut_test.py  exp_runner.py  exp_runner_test.py  interface_runner.py  interface_runner_test.py  prepare_funcs.py  prepare_funcs_test.py  routine.py  routine_test.py
elasticai/fpga_testing/scripts_build/: __init__.py  bin_build.py  bin_build_test.py  config.mk  config_verilog.mk  copy_scripts.py
elasticai/fpga_testing/skeleton/: skeleton_math.v
elasticai/fpga_testing/src/: __init__.py  copy.py  copy_design.py  exp_dut.py  exp_runner.py  helper.py  interface_serial.py  plotting.py  signal_generator.py  yaml_handler.py
elasticai/fpga_testing/testcase/: __init__.py  bode.py  creator.py  echo.py  env.py  math.py  mult.py  rxm.py
elasticai/fpga_testing/tests/: __init__.py  arty7_echo_tb.py  arty7_echo_test.py  arty7_func_tb.py  arty7_led_tb.py  arty7_led_test.py  arty7_mult_tb.py  arty7_ram_tb.py  arty7_ram_test.py  arty7_rom_tb.py  arty7_sim_test.py  design_echo_tb.py  design_func_tb.py  design_led_tb.py  design_mult_tb.py  design_ram_tb.py  design_rom_tb.py  design_test.py  env5_led_tb.py  env5_led_test.py  fpga_test.py
elasticai/hw_measurements/: README.md  __init__.py  copy_template.py  copy_template_test.py  data_types.py  data_types_test.py  plots.py  plots_test.py  predefines.py  scan_instruments.py  units.py
elasticai/hw_measurements/_helper/: csv.py  csv_test.py  structure.py  structure_test.py  yaml.py  yaml_test.py
elasticai/hw_measurements/charac/: __init__.py  adc.py  adc_test.py  amp.py  amp_test.py  common.py  common_test.py  dac.py  (+5 more)
example/: data_analysis.py  env5_build.py  env5_testing.py  fpga_testing.py  fpga_testing_arty7.py  fpga_testing_arty7_test.py  mxo4x_example.py  rtm3004_example.py
fpga_design/: design_project.xpr
(+91 files in other folders)
